--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,89 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.carterchen247.multiplepartprogressbar.MultipleProgressbarView
-        android:id="@+id/progressbar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:icon_radius="20dp"
-        app:icon_resource="@drawable/shape_progressbar_icon"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.2" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.8" />
+
+            <com.carterchen247.multiplepartprogressbar.MultiplePartProgressbar
+                android:id="@+id/defaultProgressbar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="50dp"
+                app:icon_radius="20dp"
+                app:icon_resource="@drawable/shape_progressbar_icon"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintStart_toStartOf="@id/guideline"
+                app:layout_constraintTop_toTopOf="parent"
+                app:progress_width="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="DEFAULT"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@id/defaultProgressbar"
+                app:layout_constraintEnd_toEndOf="@id/defaultProgressbar"
+                app:layout_constraintStart_toStartOf="@id/defaultProgressbar"
+                app:layout_constraintTop_toTopOf="@id/defaultProgressbar"
+                tools:ignore="HardcodedText,SmallSp" />
+
+            <com.carterchen247.multiplepartprogressbar.MyMultiplePartProgressbar
+                android:id="@+id/customizedProgressbar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="50dp"
+                app:icon_radius="12dp"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintStart_toStartOf="@id/guideline"
+                app:layout_constraintTop_toBottomOf="@id/defaultProgressbar" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CUSTOMIZED"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@id/customizedProgressbar"
+                app:layout_constraintEnd_toEndOf="@id/customizedProgressbar"
+                app:layout_constraintStart_toStartOf="@id/customizedProgressbar"
+                app:layout_constraintTop_toTopOf="@id/customizedProgressbar"
+                tools:ignore="HardcodedText,SmallSp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/playButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="@color/design_default_color_primary"
+        android:src="@drawable/ic_baseline_play_arrow_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:progress_width="10dp" />
+        app:tint="@color/white"
+        tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
